<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llNoInternet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:src="@drawable/ic_no_internet" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="58dp"
        android:text="@string/no_connection"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:text="@string/check_connection"
        android:textColor="@color/content_grey"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTryAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_bg_btn_round_grey"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/try_again"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <!--    <androidx.appcompat.widget.AppCompatTextView-->
    <!--        android:id="@+id/tvOfflinePosts"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:layout_marginEnd="16dp"-->
    <!--        android:background="@drawable/shape_bg_btn_round_grey"-->
    <!--        android:gravity="center"-->
    <!--        android:padding="15dp"-->
    <!--        android:text="@string/offline_posts"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textSize="18sp" />-->


</androidx.appcompat.widget.LinearLayoutCompat>